@@ -1,3 +1,5 @@
+Changes with melon 1.2.6                                          27 Jul 2015
+    *) Fixed some bugs of salloc.
 
 Changes with melon 1.2.5                                          20 Jul 2015
     *) Optimized the initialization of boot parameters.
